--- a/src/main/resources/recipes/minecraft/crafting_shaped.yml
+++ b/src/main/resources/recipes/minecraft/crafting_shaped.yml
@@ -11,9 +11,10 @@ constructionwand:building-wand-common:
 constructionwand:building-wand-rare:
   pattern:
     - " II"
-    - " SI"
+    - " AI"
     - "S  "
   key:
+    A: constructionwand:construction-wand-common
     I: minecraft:iron_ingot
     S: minecraft:stick
   result: constructionwand:building-wand-rare
@@ -21,9 +22,10 @@ constructionwand:building-wand-rare:
 constructionwand:building-wand-epic:
   pattern:
     - " GG"
-    - " SG"
+    - " AG"
     - "S  "
   key:
+    A: constructionwand:construction-wand-rare
     G: minecraft:gold_ingot
     S: minecraft:stick
   result: constructionwand:building-wand-epic
@@ -40,29 +42,31 @@ constructionwand:building-wand-block-strict-common:
 
 constructionwand:building-wand-block-strict-rare:
   pattern:
-    - "II  "
-    - "IS  "
+    - "II "
+    - "IA "
     - "  S"
   key:
+    A: constructionwand:construction-wand-block-strict-common
     I: minecraft:iron_ingot
     S: minecraft:stick
   result: constructionwand:building-wand-block-strict-rare
 
 constructionwand:building-wand-block-strict-epic:
   pattern:
-    - "GG  "
-    - "GS  "
+    - "GG "
+    - "GA "
     - "  S"
   key:
+    A: constructionwand:construction-wand-block-strict-rare
     G: minecraft:gold_ingot
     S: minecraft:stick
   result: constructionwand:building-wand-block-strict-epic
 
 constructionwand:breaking-wand-common:
   pattern:
-    - "OOI"
+    - " OI"
     - "OSO"
-    - "SOO"
+    - "SO "
   key:
     O: minecraft:obsidian
     I: minecraft:iron_ingot
@@ -71,10 +75,11 @@ constructionwand:breaking-wand-common:
 
 constructionwand:breaking-wand-rare:
   pattern:
-    - "OOI"
-    - "OSO"
-    - "SOO"
+    - " OI"
+    - "OAO"
+    - "SO "
   key:
+    A: constructionwand:breaking-wand-common
     O: minecraft:obsidian
     I: minecraft:iron_ingot
     S: minecraft:stick
@@ -83,9 +88,10 @@ constructionwand:breaking-wand-rare:
 constructionwand:breaking-wand-epic:
   pattern:
     - "OOI"
-    - "OSO"
+    - "OAO"
     - "SOO"
   key:
+    A: constructionwand:breaking-wand-rare
     O: minecraft:obsidian
     I: minecraft:iron_ingot
     S: minecraft:stick
@@ -104,22 +110,22 @@ constructionwand:fill-wand-common:
 
 constructionwand:fill-wand-rare:
   pattern:
-    - " DD"
-    - " N "
+    - "  N"
+    - " A "
     - "S  "
   key:
-    D: minecraft:diamond
+    A: constructionwand:fill-wand-common
     N: minecraft:nether_star
     S: minecraft:stick
   result: constructionwand:fill-wand-rare
 
 constructionwand:fill-wand-epic:
   pattern:
-    - " DD"
-    - " N "
-    - "SN "
+    - "  N"
+    - " A "
+    - "S  "
   key:
-    D: minecraft:diamond
+    A: constructionwand:fill-wand-rare
     N: minecraft:nether_star
     S: minecraft:stick
   result: constructionwand:fill-wand-epic
