--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 name=ConstructionWand
 group=com.balugaq
 main-class=com.balugaq.constructionwand.implementation.ConstructionWandPlugin
-version=v10
+version=1.0.0
 pylon-core.version=0.18.0
