fix: duplicate lore and update rebar

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 name=ConstructionWand
 group=com.balugaq
 main-class=com.balugaq.constructionwand.implementation.ConstructionWandPlugin
-version=1.0.1
-pylon-core.version=0.22
+version=1.0.4
+rebar.version=0.30.3
